feat: modulo rutina/cronograma semanal
